--- a/src/component/YouTube/youtubestyle.css
+++ b/src/component/YouTube/youtubestyle.css
@@ -1,8 +1,8 @@
-/* .singleVideoWrapper {
+.singleVideoWrapper {
     background: #f3f2f2;
     box-shadow: 4px 0px 13px rgba(158, 158, 158, 0.12);
     margin-bottom: 30px;
-    max-height: 200px;
+    max-height: 100px;
     overflow: hidden;
   }
 
@@ -11,13 +11,16 @@
       margin-left:0.5px;
       
 
-  } */
-  /* .vids{
-      display:flex
-  } */
+  }
+ /* .vids{
+      max-height: 280px
+  }  */
 
   .discription{
-      font-size:0.6em
+      font-size:0.6em;
+    
+      
+      
   }
 
   @media(min-width:768px){
@@ -30,15 +33,16 @@
         /* line-height: 100%; */
       }
     
-      /* .whole-section{
-          /* width:100%; */
-          /* display:flex; */
+      .whole-section{
+          width:100%;
+          display:flex;
     
-      /* } */ */
+      } 
       .vids{
           display:inline-block;
           width:100%;
           display:block;
+          
           /* position: left !important; */
       }
     
